--- a/template.html
+++ b/template.html
@@ -14,9 +14,7 @@
       #wrap{
         background: #cccccc;
         width: 960px;
-        position: relative;
-        left: 50%;
-        margin-left: -480px;
+        margin: 0 auto;
 
 
       }
@@ -52,7 +50,7 @@
   <body>
     <div id ="wrap">
       <div id="header">
-        <span class="logo"><img src="C:\Users\82104\Desktop\folder\web\nfllogo.png" alt="사이트" width = "70px" height = "97px" ></span>
+        <span class="logo"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/National_Football_League_logo.svg/282px-National_Football_League_logo.svg.png" alt="사이트" width = "70px" height = "97px" ></span>
         <h1 id = "headtop">NFL 소개</h1>
         <h2 >NFL KOREA - 대한민국에 살며 미식축구 보기!</h2>
         <div class="clear"></div>
